--- a/lib/grape/generator/templates/base/Rakefile.erb
+++ b/lib/grape/generator/templates/base/Rakefile.erb
@@ -6,5 +6,7 @@ rescue LoadError
   puts 'You must \`gem install bundler\` and \`bundle install\` to run rake tasks'
 end
 require 'rake'
+require_relative 'config/boot'
 
+Rake::Task.define_task(:environment)
 Dir[File.expand_path('./lib/tasks/*.rake')].each{|f| load f }
