--- a/lib/grape/generator/templates/base/app/apis/app_api.rb.erb
+++ b/lib/grape/generator/templates/base/app/apis/app_api.rb.erb
@@ -1,19 +1,12 @@
-require_relative 'errors'
+require_relative 'concerns/error_handler'
 
 module <%= config[:app][:name_classify] %>
   class API < Grape::API
+    include ErrorHandler
+
     content_type :json, 'application/json'
     format :json
     default_format :json
-
-    rescue_from :all do |e| 
-      code = Errors::ERROR_MAPPING[e.class] || 500 
-      if code == 500 && ENV["RACK_ENV"] != "production"
-        raise e
-      else
-        error!({reason: Errors.error_reason(code)}, code)
-      end 
-    end
 
     helpers do
       def logger
