--- a/lib/grape/generator/templates/rails/app/apis/concerns/error_handler.rb.erb
+++ b/lib/grape/generator/templates/rails/app/apis/concerns/error_handler.rb.erb
@@ -1,4 +1,4 @@
-module <%= config[:app][:name_classify] %>
+module API
   class Error < StandardError; end 
   class AuthenticationFailed < Error; end 
   class PermissionDenied < Error; end 
